--- a/train_fasttext.ipynb
+++ b/train_fasttext.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0025de88",
    "metadata": {
     "ExecuteTime": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "066858b0",
    "metadata": {
     "ExecuteTime": {
@@ -149,7 +149,7 @@
        "[1030000 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "09f1c8f5",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "Name: good, Length: 2820, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7d58ab08",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "Name: brand, Length: 6976, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 5,
    "id": "df74a803",
    "metadata": {},
    "outputs": [],
@@ -273,8 +273,8 @@
     "    text = re.sub(r'[^\\w\\s]', ' ', text)  # remove punctuation\n",
     "    words = []\n",
     "    for w in text.lower().split():\n",
-    "        if len(w) < 2:\n",
-    "            continue\n",
+    "#         if len(w) < 2:\n",
+    "#             continue\n",
     "        \n",
     "        num_eng_chars = len(re.findall(r'[a-z]', w))\n",
     "        num_ru_chars = len(re.findall(r'[а-я]', w))\n",
@@ -300,17 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 9,
    "id": "5ea07941",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1) 001183|Диск сцепления 2123 VALEO 809726'"
+       "'Декоративная клейкая лента МЕТАЛЛИК, намотка 1 м, ширина 1,2 см, 90 шт в банке ЦЕНА ЗА БАНКУ(шт)'"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 10,
    "id": "6601e42f",
    "metadata": {},
    "outputs": [
@@ -355,22 +355,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8800</th>\n",
-       "      <td>8800</td>\n",
-       "      <td>1) 001183|Диск сцепления 2123 VALEO 809726</td>\n",
-       "      <td>диск</td>\n",
-       "      <td>valeo</td>\n",
+       "      <th>16235</th>\n",
+       "      <td>16235</td>\n",
+       "      <td>Декоративная клейкая лента МЕТАЛЛИК, намотка 1...</td>\n",
+       "      <td>лента</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id                                        name  good  brand\n",
-       "8800  8800  1) 001183|Диск сцепления 2123 VALEO 809726  диск  valeo"
+       "          id                                               name   good brand\n",
+       "16235  16235  Декоративная клейкая лента МЕТАЛЛИК, намотка 1...  лента      "
       ]
      },
-     "execution_count": 259,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,17 +400,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 11,
    "id": "5b4e12cb",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['диск', 'сцепления', 'valeo']"
+       "['декоративная',\n",
+       " 'клейкая',\n",
+       " 'лента',\n",
+       " 'металлик',\n",
+       " 'намотка',\n",
+       " '1',\n",
+       " 'м',\n",
+       " 'ширина',\n",
+       " '1',\n",
+       " '1',\n",
+       " 'см',\n",
+       " '1',\n",
+       " 'в',\n",
+       " 'банке',\n",
+       " 'цена',\n",
+       " 'за',\n",
+       " 'банку']"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 12,
    "id": "2dddc22e",
    "metadata": {
     "ExecuteTime": {
@@ -434,8 +452,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 48.6 s, sys: 765 ms, total: 49.4 s\n",
-      "Wall time: 49.4 s\n"
+      "CPU times: user 57.7 s, sys: 761 ms, total: 58.5 s\n",
+      "Wall time: 58.5 s\n"
      ]
     },
     {
@@ -469,13 +487,13 @@
        "      <th>0</th>\n",
        "      <td>Petmax Бантик леопард с красн розой 2шт</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[petmax, бантик, леопард, красн, розой]</td>\n",
+       "      <td>[petmax, бантик, леопард, с, красн, розой, 1]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>87191 Бусы для елки шарики_87191</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[бусы, для, елки, шарики_1]</td>\n",
+       "      <td>[1, бусы, для, елки, шарики_1]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -487,13 +505,13 @@
        "      <th>3</th>\n",
        "      <td>7) YI572-03X-ONE ЗАКОЛКА ДЛЯ ВОЛОС ДЛЯ ДЕВОЧКИ</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[yi, 1, one, заколка, для, волос, для, девочки]</td>\n",
+       "      <td>[1, yi, 1, 1, x, one, заколка, для, волос, для...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Одежда (вес) 1500</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[одежда, вес]</td>\n",
+       "      <td>[одежда, вес, 1]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -505,25 +523,25 @@
        "      <th>1029995</th>\n",
        "      <td>F-2296  Спонж д/макияжа фигурный (шт)</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[спонж, для, макияжа, фигурный]</td>\n",
+       "      <td>[f, 1, спонж, для, макияжа, фигурный]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029996</th>\n",
        "      <td>4 5702737510597 69.88 Дифф/Arom/1601</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[дифф, arom]</td>\n",
+       "      <td>[1, 1, 1, 1, дифф, arom, 1]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029997</th>\n",
        "      <td>Матрас надувной 540*74см Tropical Bird запл.д/...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[матрас, надувной, см, tropical, bird, запл, д...</td>\n",
+       "      <td>[матрас, надувной, 1, 1, см, tropical, bird, з...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029998</th>\n",
        "      <td>пододеяльник СТМ Страйп 3-сп, размер: 796х185с...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[пододеяльник, стм, страйп, сп, размер, х, 1, ...</td>\n",
+       "      <td>[пододеяльник, стм, страйп, 1, сп, размер, 1, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029999</th>\n",
@@ -551,22 +569,22 @@
        "1029999  Пакет ламинированный вертикальный ?Чудесных мг... NaN   \n",
        "\n",
        "                                                    tokens  \n",
-       "0                  [petmax, бантик, леопард, красн, розой]  \n",
-       "1                              [бусы, для, елки, шарики_1]  \n",
+       "0            [petmax, бантик, леопард, с, красн, розой, 1]  \n",
+       "1                           [1, бусы, для, елки, шарики_1]  \n",
        "2                        [футболка, piazza, italia, wr, 1]  \n",
-       "3          [yi, 1, one, заколка, для, волос, для, девочки]  \n",
-       "4                                            [одежда, вес]  \n",
+       "3        [1, yi, 1, 1, x, one, заколка, для, волос, для...  \n",
+       "4                                         [одежда, вес, 1]  \n",
        "...                                                    ...  \n",
-       "1029995                    [спонж, для, макияжа, фигурный]  \n",
-       "1029996                                       [дифф, arom]  \n",
-       "1029997  [матрас, надувной, см, tropical, bird, запл, д...  \n",
-       "1029998  [пододеяльник, стм, страйп, сп, размер, х, 1, ...  \n",
+       "1029995              [f, 1, спонж, для, макияжа, фигурный]  \n",
+       "1029996                        [1, 1, 1, 1, дифф, arom, 1]  \n",
+       "1029997  [матрас, надувной, 1, 1, см, tropical, bird, з...  \n",
+       "1029998  [пододеяльник, стм, страйп, 1, сп, размер, 1, ...  \n",
        "1029999  [пакет, ламинированный, вертикальный, чудесных...  \n",
        "\n",
        "[1030000 rows x 3 columns]"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,167 +593,6 @@
     "%%time\n",
     "names[\"tokens\"] = names[\"name\"].apply(preprocess_text)\n",
     "names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 266,
-   "id": "c90e6840",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    1.030000e+06\n",
-       "mean     5.061572e+00\n",
-       "std      2.434675e+00\n",
-       "min      0.000000e+00\n",
-       "25%      3.000000e+00\n",
-       "50%      5.000000e+00\n",
-       "75%      6.000000e+00\n",
-       "max      4.400000e+01\n",
-       "Name: tokens, dtype: float64"
-      ]
-     },
-     "execution_count": 266,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "names.tokens.apply(len).describescribe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 267,
-   "id": "8dc216fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>id</th>\n",
-       "      <th>tokens</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4411</th>\n",
-       "      <td>А м е р и к а н о / с р е д н и й</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26135</th>\n",
-       "      <td>4627145110829   100.00 * 1 ШТ=100.00</td>\n",
-       "      <td>1135.0</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30684</th>\n",
-       "      <td>9 мм</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32700</th>\n",
-       "      <td>42.361.0F</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38106</th>\n",
-       "      <td>№ 01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1000570</th>\n",
-       "      <td>А Р C</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1002512</th>\n",
-       "      <td>W 868/36   (311)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1011191</th>\n",
-       "      <td>!11 60.0% 214мл</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014311</th>\n",
-       "      <td>0,5 л.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1027323</th>\n",
-       "      <td>M&amp;M`S  584гр</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>180 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         name      id tokens\n",
-       "4411        А м е р и к а н о / с р е д н и й     NaN     []\n",
-       "26135    4627145110829   100.00 * 1 ШТ=100.00  1135.0     []\n",
-       "30684                                    9 мм     NaN     []\n",
-       "32700                               42.361.0F     NaN     []\n",
-       "38106                                    № 01     NaN     []\n",
-       "...                                       ...     ...    ...\n",
-       "1000570                                 А Р C     NaN     []\n",
-       "1002512                      W 868/36   (311)     NaN     []\n",
-       "1011191                       !11 60.0% 214мл     NaN     []\n",
-       "1014311                               0,5 л.      NaN     []\n",
-       "1027323                          M&M`S  584гр     NaN     []\n",
-       "\n",
-       "[180 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 267,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "names[names.tokens.apply(len) == 0]"
    ]
   },
   {
@@ -758,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 13,
    "id": "bca4fbe1",
    "metadata": {
     "ExecuteTime": {
@@ -771,14 +628,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11min 58s, sys: 8.17 s, total: 12min 6s\n",
-      "Wall time: 4min 36s\n"
+      "CPU times: user 28min 26s, sys: 41.1 s, total: 29min 7s\n",
+      "Wall time: 10min 12s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "FastText(names[\"tokens\"], vector_size=128, window=5, min_count=5, epochs=20).save(\"fasttext_models/fasttext_128_preprocc_fitted.model\")"
+    "FastText(names[\"tokens\"], vector_size=256, window=5, min_count=5, epochs=30).save(\"fasttext_models/fasttext_256_hardpreprocc_fitted.model\")"
    ]
   },
   {
