--- a/train_fasttext.ipynb
+++ b/train_fasttext.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "id": "df74a803",
    "metadata": {},
    "outputs": [],
@@ -268,6 +268,7 @@
     "    text = re.sub('\\d+', '1', text)  # replace numbers to 1\n",
     "    text = replace_camel_case(text)\n",
     "    text = re.sub('д/', 'для ', text)\n",
+    "    text = re.sub('Д/', 'для ', text)\n",
     "    text = insert_space_after_one(text)\n",
     "    text = re.sub(r'\\s+', ' ', text)  # remove extra spaces\n",
     "    text = re.sub(r'[^\\w\\s]', ' ', text)  # remove punctuation\n",
@@ -292,25 +293,44 @@
     "        if ' ' in w:\n",
     "            words.extend(w.split())\n",
     "        else:\n",
+    "            if w == 'нести':\n",
+    "                w = 'nestea'\n",
+    "            if w == 'эпика':\n",
+    "                w = 'epica'\n",
+    "            if w == 'хелен':\n",
+    "                w = 'helen'\n",
+    "            if w == 'харпер':\n",
+    "                w = 'harper'\n",
+    "            if w == 'тимотей':\n",
+    "                w = 'timotei'\n",
+    "            if w == 'тесс':\n",
+    "                w = 'tess'\n",
+    "            if w == 'кроненбург':\n",
+    "                w = 'kronenbourg'\n",
+    "            if w == 'пай':\n",
+    "                w = 'pie'\n",
+    "            if w == 'чоко':\n",
+    "                w = 'choko'\n",
+    "            if w == 'салтон':\n",
+    "                w = 'salton'\n",
     "            words.append(w)\n",
-    "\n",
     "        \n",
     "    return words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "id": "5ea07941",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Декоративная клейкая лента МЕТАЛЛИК, намотка 1 м, ширина 1,2 см, 90 шт в банке ЦЕНА ЗА БАНКУ(шт)'"
+       "'Козинак из воздушных зерен риса  Тимоша 50г'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "id": "6601e42f",
    "metadata": {},
    "outputs": [
@@ -355,22 +375,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16235</th>\n",
-       "      <td>16235</td>\n",
-       "      <td>Декоративная клейкая лента МЕТАЛЛИК, намотка 1...</td>\n",
-       "      <td>лента</td>\n",
-       "      <td></td>\n",
+       "      <th>4670</th>\n",
+       "      <td>4670</td>\n",
+       "      <td>Козинак из воздушных зерен риса  Тимоша 50г</td>\n",
+       "      <td>козинак</td>\n",
+       "      <td>тимоша</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id                                               name   good brand\n",
-       "16235  16235  Декоративная клейкая лента МЕТАЛЛИК, намотка 1...  лента      "
+       "        id                                         name     good   brand\n",
+       "4670  4670  Козинак из воздушных зерен риса  Тимоша 50г  козинак  тимоша"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +403,9 @@
    "cell_type": "code",
    "execution_count": 194,
    "id": "757c4323",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -396,6 +418,123 @@
    "source": [
     "%%timeit\n",
     "preprocess_text(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "afc800c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good_founded_list = []\n",
+    "brand_founded_list = []\n",
+    "DEBUG = True\n",
+    "\n",
+    "for i, r in train_df.iterrows():\n",
+    "    tokens = preprocess_text(r['name'])\n",
+    "    brand = r['brand']\n",
+    "    good = r['good']\n",
+    "    if len(re.findall(r'[a-z]', brand)) > 0 and brand not in tokens:\n",
+    "        DEBUG = False\n",
+    "    else:\n",
+    "        DEBUG = False\n",
+    "    if DEBUG:\n",
+    "        print(r['name'])\n",
+    "    if brand:\n",
+    "        if DEBUG:\n",
+    "            print(f\"brand: {brand}\")\n",
+    "        brand_founded_list.append(brand in tokens)\n",
+    "    if good:\n",
+    "        if DEBUG:\n",
+    "            print(f\"good: {good}\")\n",
+    "        good_founded_list.append(good in tokens)\n",
+    "    if DEBUG:\n",
+    "        print(tokens)\n",
+    "        print(f'\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "10fe923f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baseline:\n",
+    "#     good:  0.849\n",
+    "#     brand: 0.57\n",
+    "        \n",
+    "# hard_preprocc:\n",
+    "#     good:  0.919689\n",
+    "#     brand: 0.694089\n",
+    "\n",
+    "# hard_preprocc + brand renaming\n",
+    "#     good:  0.919689\n",
+    "#     brand: 0.695180"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "6ba3345f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9196890120342418"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(good_founded_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "08137f66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6951803576841468"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(brand_founded_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1b4f7471",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'епица'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_cyrillic('epica')"
    ]
   },
   {
