--- a/train_fasttext.ipynb
+++ b/train_fasttext.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "df74a803",
    "metadata": {},
    "outputs": [],
@@ -320,17 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "5ea07941",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Козинак из воздушных зерен риса  Тимоша 50г'"
+       "'Пиво Жигулевское Бочковое 1,35л 5% Эфес пэт'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "id": "6601e42f",
    "metadata": {},
    "outputs": [
@@ -375,22 +375,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4670</th>\n",
-       "      <td>4670</td>\n",
-       "      <td>Козинак из воздушных зерен риса  Тимоша 50г</td>\n",
-       "      <td>козинак</td>\n",
-       "      <td>тимоша</td>\n",
+       "      <th>23902</th>\n",
+       "      <td>23902</td>\n",
+       "      <td>Пиво Жигулевское Бочковое 1,35л 5% Эфес пэт</td>\n",
+       "      <td>пиво</td>\n",
+       "      <td>жигулевское</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id                                         name     good   brand\n",
-       "4670  4670  Козинак из воздушных зерен риса  Тимоша 50г  козинак  тимоша"
+       "          id                                         name  good        brand\n",
+       "23902  23902  Пиво Жигулевское Бочковое 1,35л 5% Эфес пэт  пиво  жигулевское"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,23 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "afc800c2",
+   "execution_count": 7,
+   "id": "2222d2ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "good_founded_list = []\n",
     "brand_founded_list = []\n",
-    "DEBUG = True\n",
+    "DEBUG = False\n",
     "\n",
     "for i, r in train_df.iterrows():\n",
     "    tokens = preprocess_text(r['name'])\n",
     "    brand = r['brand']\n",
     "    good = r['good']\n",
-    "    if len(re.findall(r'[a-z]', brand)) > 0 and brand not in tokens:\n",
-    "        DEBUG = False\n",
-    "    else:\n",
-    "        DEBUG = False\n",
+    "#     if len(re.findall(r'[a-z]', brand)) > 0 and brand not in tokens:\n",
+    "#         DEBUG = False\n",
+    "#     else:\n",
+    "#         DEBUG = False\n",
     "    if DEBUG:\n",
     "        print(r['name'])\n",
     "    if brand:\n",
@@ -456,8 +456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "10fe923f",
+   "execution_count": 8,
+   "id": "b587b6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,8 +476,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "6ba3345f",
+   "execution_count": 9,
+   "id": "1c5e6e16",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "0.9196890120342418"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,8 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "08137f66",
+   "execution_count": 10,
+   "id": "7c8ac8bd",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "0.6951803576841468"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,56 +518,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1b4f7471",
+   "execution_count": 12,
+   "id": "5b4e12cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'епица'"
+       "['пиво', 'жигулевское', 'бочковое', '1', '1', '1', 'эфес', 'пэт']"
       ]
      },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "to_cyrillic('epica')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5b4e12cb",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['декоративная',\n",
-       " 'клейкая',\n",
-       " 'лента',\n",
-       " 'металлик',\n",
-       " 'намотка',\n",
-       " '1',\n",
-       " 'м',\n",
-       " 'ширина',\n",
-       " '1',\n",
-       " '1',\n",
-       " 'см',\n",
-       " '1',\n",
-       " 'в',\n",
-       " 'банке',\n",
-       " 'цена',\n",
-       " 'за',\n",
-       " 'банку']"
-      ]
-     },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "2dddc22e",
    "metadata": {
     "ExecuteTime": {
@@ -591,8 +552,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 57.7 s, sys: 761 ms, total: 58.5 s\n",
-      "Wall time: 58.5 s\n"
+      "CPU times: user 57.6 s, sys: 652 ms, total: 58.2 s\n",
+      "Wall time: 58.2 s\n"
      ]
     },
     {
@@ -723,7 +684,7 @@
        "[1030000 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "bca4fbe1",
    "metadata": {
     "ExecuteTime": {
@@ -767,14 +728,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28min 26s, sys: 41.1 s, total: 29min 7s\n",
-      "Wall time: 10min 12s\n"
+      "CPU times: user 33min 45s, sys: 1min 5s, total: 34min 50s\n",
+      "Wall time: 12min 11s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "FastText(names[\"tokens\"], vector_size=256, window=5, min_count=5, epochs=30).save(\"fasttext_models/fasttext_256_hardpreprocc_fitted.model\")"
+    "FastText(names[\"tokens\"], vector_size=256, window=5, min_count=5, epochs=30).save(\"fasttext_models/fasttext_256_hardpreprocc_renamed_fitted.model\")"
    ]
   },
   {
